--- a/src/sass/components/ads.scss
+++ b/src/sass/components/ads.scss
@@ -11,17 +11,18 @@ $ads-font-size-md: 2.4rem;
 .ads {
   display        : flex;
   justify-content: flex-start;
-  margin-top     : 1rem;
+  position       : relative;
   width          : 200px;
 }
 .ads__button {
+  @include transition-default;
   background-color: $color-white;
   border          : 1px solid $color-black;
   // border-radius   : 50%;
   color           : $color-black;
   font-size       : 1rem;
   height          : 2rem;
-  left            : 18.0rem;
+  right           : 0;
   outline         : 0;
   position        : absolute;
   text-align      : center;
@@ -31,6 +32,7 @@ $ads-font-size-md: 2.4rem;
 .ads__button:hover {
   background-color: $color-red;
   color           : $color-white;
+  transform       : translateX(0.3rem);
 }
 .ads__link {
   @include link-plain;
