--- a/src/sass/components/post.scss
+++ b/src/sass/components/post.scss
@@ -37,6 +37,7 @@
 }
 .post__link__thumbnail-container {
   overflow: hidden;
+  height  : 12rem;
   width   : 100%;
 }
 .post__link__thumbnail-container:after {
@@ -87,6 +88,9 @@
     // flex: 1 1 auto;
     margin: 3rem 2rem;
     width : calc(50% - 4rem );
+  }
+  .post__link__thumbnail-container {
+    height: auto;
   }
 }
 @media screen and (min-width: 768px) {
