--- a/src/sass/layout.scss
+++ b/src/sass/layout.scss
@@ -8,9 +8,11 @@
 }
 .container-ads {
   display        : flex;
+  flex-wrap      : wrap;
   height         : 100%;
   justify-content: space-around;
-  padding        : 0.1rem;
+  left           : -100%;
+  padding        : 1rem;
   position       : relative;
   width          : 100%;
 }
